Fixed an issue with long log entries in the live log displayed poorly. Also tweaked the spacing between log entries slight

--- a/Duplicati/Server/webroot/ngax/less/style.less
+++ b/Duplicati/Server/webroot/ngax/less/style.less
@@ -210,10 +210,6 @@ ul.tabs {
     }
 
     .entries.livedata {
-        li {
-            height: 1.2em;
-        }
-
         li.expanded {
             height: auto;
             overflow: auto;
@@ -1492,7 +1488,7 @@ body {
 
                     ul.entries {
                         li {
-                            padding-top: 30px;
+                            padding-top: 10px;
                         }
                     }
                 }
